# Secure-Cloud-Storage

./: CMakeLists.txt  README.md  makefile
CertAuth/: FOC_crl.pem  focCA_cert.pem  focCA_crl.pem
Certificates/: FOC_cert.pem
Keys/Client/: francesco_privkey.pem  mirco_privkey.pem
Keys/Server/: Server_cert.pem  certreq.pem  server_prv_key.pem
Source/Client/: client_conn_functions.cpp  client_functions.h  client_include.h  client_logic_functions.cpp  client_main.cpp  client_message_exchange.cpp  client_protocol_functions.cpp  struct_message.h
Source/Common_Libs/: buffers.h  common_functions.h  common_parameters.h  communication_utilities.cpp  crypto_utilities.cpp  struct_message.h
Source/Server/: server.h  server_conn_functions.cpp  server_functions.cpp  server_functions.h  server_include.h  server_libs.h  server_main.cpp  server_protocol_functions.cpp  struct_message.h  worker.h  worker_logic_functions.cpp  worker_message_exchange.cpp  worker_protocol_functions.cpp
